[package]
name = "opentelemetry-tonic"
version = "0.1.0"
edition = "2021"

description = """
This library provide `MetadataInjector` and `MetadataExtractor`, which is used to propogate span context from grpc client to grpc server.
So to put client & server span/event into one bigger span.
"""

license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opentelemetry = { version = "0.17" }
tonic = "0.8"
tracing = "0.1"
tracing-opentelemetry = "0.17"
